# meetmin

./: .gitignore  AGENTS.md  README.md  WIKI.md  bootstrap  devenv.nix  devenv.yaml  pyproject.toml
docs/: llm-wiki-assessment.md
meeting_dialog/: 2026-07-05-70s-rock-discussion.md  2026-07-06-70s-rock-discussion.md  2026-07-07-70s-rock-discussion.md  2026-07-08-70s-rock-discussion.md  2026-07-10-70s-rock-discussion.md  2026-07-12-70s-rock-discussion.md  2026-07-13-70s-rock-discussion.md  2026-07-14-70s-rock-discussion.md  2026-07-15-70s-rock-discussion.md
meetmin/: __init__.py  ask.py  chat.py  ingest.py  summarize.py  wikitools.py
minutes/: 2026-07-01-70s-rock-discussion.md  2026-07-02-70s-rock-discussion.md  2026-07-03-70s-rock-discussion.md  2026-07-04-70s-rock-discussion.md  2026-07-05-70s-rock-discussion.md  2026-07-06-70s-rock-discussion.md  2026-07-07-70s-rock-discussion.md  2026-07-08-70s-rock-discussion.md  2026-07-09-70s-rock-discussion.md  2026-07-10-70s-rock-discussion.md  2026-07-11-70s-rock-discussion.md  2026-07-12-70s-rock-discussion.md  2026-07-13-70s-rock-discussion.md  2026-07-14-70s-rock-discussion.md  2026-07-15-70s-rock-discussion.md  2026-07-16-70s-rock-discussion.md  2026-07-17-70s-rock-discussion.md  2026-07-18-70s-rock-discussion.md  2026-07-19-70s-rock-discussion.md  2026-07-20-70s-rock-discussion.md
tests/: conftest.py  test_ask.py  test_chat.py  test_ingest.py  test_wikitools.py
transcripts/: 2026-07-01-70s-rock-discussion.md  2026-07-02-70s-rock-discussion.md  2026-07-03-70s-rock-discussion.md  2026-07-04-70s-rock-discussion.md  (+17 more)
(+127 files in other folders)
