[project]
name = "meetmin"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0",
]

[project.scripts]
meetmin-summarize = "meetmin.summarize:main"
meetmin-ingest = "meetmin.ingest:main"
meetmin-ask = "meetmin.ask:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
